[gd_scene load_steps=11 format=3 uid="uid://cfxd2ol8i41px"]

[ext_resource type="Script" path="res://game.gd" id="1_i36l4"]
[ext_resource type="PackedScene" uid="uid://btpqor03vcqio" path="res://player.tscn" id="1_xvohg"]
[ext_resource type="PackedScene" uid="uid://bf4sad434wo2y" path="res://tree.tscn" id="2_1u4xu"]
[ext_resource type="Script" path="res://Scripts/level_bar.gd" id="2_rjww1"]
[ext_resource type="Texture2D" uid="uid://cdiq834snym1f" path="res://assets/PauseBTN.png" id="3_ik54m"]
[ext_resource type="PackedScene" uid="uid://roseiadvphks" path="res://scenes/paused.tscn" id="5_n8sj2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_re6h0"]
bg_color = Color(0.354516, 0.332506, 0.334752, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkb22"]
bg_color = Color(0.680168, 0.464527, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Curve2D" id="Curve2D_hiecu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1132, -369, 0, 0, 0, 0, -969.626, -373.782, 0, 0, 0, 0, 1091.63, -369.327, 0, 0, 0, 0, 1074, 953, 0, 0, 0, 0, -1130.2, 972.474, 0, 0, 0, 0, -1132, -372, 0, 0, 0, 0, -756, -372)
}
point_count = 7

[sub_resource type="Curve2D" id="Curve2D_4qoib"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 150, 51, 0, 0, 0, 0, 101, 382, 0, 0, 0, 0, 164, 799, 0, 0, 0, 0, 388, 890, 0, 0, 0, 0, 707, 948, 0, 0, 0, 0, 1532, 979, 0, 0, 0, 0, 1735, 839, 0, 0, 0, 0, 1669, 214, 0, 0, 0, 0, 1413, 68, 0, 0, 0, 0, 1059, 34, 0, 0, 0, 0, 509, 136, 0, 0, 0, 0, 342, 396, 0, 0, 0, 0, 441, 599, 0, 0, 0, 0, 631, 829, 0, 0, 0, 0, 949, 751, 0, 0, 0, 0, 1229, 833, 0, 0, 0, 0, 1327, 635, 0, 0, 0, 0, 1337, 413, 0, 0, 0, 0, 805, 296, 0, 0, 0, 0, 720, 436)
}
point_count = 20

[node name="Game" type="Node2D"]
y_sort_enabled = true
position = Vector2(3, 0)
script = ExtResource("1_i36l4")

[node name="PauseScreen" type="CanvasLayer" parent="."]

[node name="Paused" parent="PauseScreen" instance=ExtResource("5_n8sj2")]
unique_name_in_owner = true
visible = false
top_level = true
offset_left = 20.0
offset_top = -8.0
offset_right = 20.0
offset_bottom = -8.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 6.0
offset_top = 1.0
offset_right = 1924.0
offset_bottom = 1087.0
metadata/_edit_use_anchors_ = true

[node name="AttackNotice" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = 39.0
offset_top = 16.0
offset_right = 364.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Press SPACE for SPLASH ATTACK"

[node name="HealthNotice" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = 40.0
offset_top = 43.0
offset_right = 255.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Health Pack Dropped"

[node name="LevelBar" type="ProgressBar" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -206.5
offset_top = 8.0
offset_right = 206.5
offset_bottom = 35.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_re6h0")
theme_override_styles/fill = SubResource("StyleBoxFlat_pkb22")
max_value = 10.0
show_percentage = false
script = ExtResource("2_rjww1")

[node name="Label" type="Label" parent="CanvasLayer/LevelBar"]
layout_mode = 0
offset_left = -39.5
offset_top = 2.0
offset_right = 0.5
offset_bottom = 29.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "LVL"
horizontal_alignment = 1

[node name="leveltext" type="Label" parent="CanvasLayer/LevelBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 416.5
offset_top = -1.0
offset_right = 456.5
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20

[node name="Timer" type="Timer" parent="CanvasLayer/LevelBar"]
wait_time = 10.0

[node name="PauseBTN" type="TextureButton" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -101.0
offset_top = 8.0
offset_right = -7.0
offset_bottom = 98.0
grow_horizontal = 0
action_mode = 0
texture_normal = ExtResource("3_ik54m")
texture_hover = ExtResource("3_ik54m")
stretch_mode = 0

[node name="Player" parent="." instance=ExtResource("1_xvohg")]
position = Vector2(960, 542)

[node name="Trees" type="Node" parent="."]

[node name="Tree" parent="Trees" instance=ExtResource("2_1u4xu")]
position = Vector2(315, 638)

[node name="Tree2" parent="Trees" instance=ExtResource("2_1u4xu")]
position = Vector2(1304, 183)

[node name="Tree3" parent="Trees" instance=ExtResource("2_1u4xu")]
position = Vector2(1405, 217)

[node name="Tree4" parent="Trees" instance=ExtResource("2_1u4xu")]
position = Vector2(1298, 245)

[node name="Tree5" parent="Trees" instance=ExtResource("2_1u4xu")]
position = Vector2(772, 789)

[node name="Tree6" parent="Trees" instance=ExtResource("2_1u4xu")]
position = Vector2(1554, 821)

[node name="Tree7" parent="Trees" instance=ExtResource("2_1u4xu")]
position = Vector2(303, 224)

[node name="Tree8" parent="Trees" instance=ExtResource("2_1u4xu")]
position = Vector2(1550, 354)

[node name="Spawner" type="Path2D" parent="."]
position = Vector2(1057.88, 152.523)
scale = Vector2(1.10855, 1.12237)
curve = SubResource("Curve2D_hiecu")

[node name="spawner_follow" type="PathFollow2D" parent="Spawner"]
unique_name_in_owner = true
position = Vector2(-1132, -369)
rotation = -0.0294421

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="HealthPackSpawn" type="Path2D" parent="."]
curve = SubResource("Curve2D_4qoib")

[node name="health_spawner_follow" type="PathFollow2D" parent="HealthPackSpawn"]
unique_name_in_owner = true
position = Vector2(150, 51)
rotation = 1.71777

[node name="HealthSpawnerTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="timeout" from="CanvasLayer/LevelBar/Timer" to="CanvasLayer/LevelBar" method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/PauseBTN" to="." method="_on_pause_btn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="HealthSpawnerTimer" to="." method="_on_health_spawner_timer_timeout"]
